--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.12.0",
     "nodemailer": "^6.9.16",
