--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "prebuild": "npm install"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
